Edit index.html and images and created ramen recipe page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
   <body>
       <h1>Odin Recipes</h1>
 
-      <a href="recipes/lasagna.html">Brenda's lasagna</a>
+      <img src="img/Takamura_crying_while_eating_the_bear_he_knocked_out.webp" alt="takamura eating">
+
+      <ul>
+
+      <li><a href="recipes/lasagna.html">Brenda's lasagna</a></li>
+
+    <li><a href="recipes/cherrycobbler-2.html">Cherry Cobbler 2</a></li>
+
+    <li><a href="recipes/ramen.html">Ramen</a></li>
+
+
+
+      </ul>
+
+      
 
   </body>
 </html>
